--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <div id='map'></div>
         <div class="formBlock">
             <form id="form">
-                <input type="text" class="input" name="start" placeholder="Choose starting point" />
-                <input type="text" class="input" name="destination" placeholder="Choose starting point" />
+                <input type="text" class="input" id="start" placeholder="Choose starting point" />
+                <input type="text" class="input" id="destination" placeholder="Choose starting point" />
                 <button type="submit">Get Directions</button>
             </form>
         </div>
