--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <div id='map'></div>
         <div class="formBlock">
             <form id="form">
-                <input type="text" class="input" id="start" placeholder="Choose starting point" />
-                <input type="text" class="input" id="destination" placeholder="Choose starting point" />
-                <button type="submit">Get Directions</button>
+                <input type="text" name="start" class="input" id="start" placeholder="Choose starting point" />
+                <input type="text" name="end" class="input" id="destination" placeholder="Choose starting point" />
+                <button style="display: none;" type="submit">Get Directions</button>
             </form>
         </div>
 
